--- a/자바/어노테이션프로세서.md
+++ b/자바/어노테이션프로세서.md
@@ -6,7 +6,9 @@
 
 특정 annotation에 대한 annotation processor는 java 코드를 입력으로 사용하고 파일(일반적으로 `.java`)을 출력으로 생성한다. 이것이 의미하는 바는 java 코드를 생성할 수 있다는 것이고 이 코드가 `.java` 파일에 저장된다는 것이라고 생각할 수 있다. 그래서 우리가 메서드를 추가하기 위해서 class 파일을 수정할 필요가 없다는 것을 말한다. 
 
-정리하면 annotation processor는 소스코드 레벨에서 소스코드에 붙어있는 annotation 정보를 읽어서 그 정보를 컴파일러가 컴파일 하는 중에 새로운 소스코드를 생성할 수 있다. 물론 기존의 코드까지도 바꾸어버릴 수 있는 lombok 같은 것도 존재한다. 또는 클래스 혹은 바이트코드를 생성할 수 있고 전혀 별개의 리소스 파일도 생성할 수 있는 기능이다.
+쉽게 생각하면 annotation processor는 컴파일러가 컴파일을 수행할 때 끼어들어서 특정한 annotaiton이 붙어있는 코드들을 읽어서 또 다른 소스코드를 생성하도록 도와주는 것이다.
+물론 기존의 코드까지도 바꾸어버릴 수 있는 lombok 같은 것도 존재한다. 원래 annotation processor는 원래 코드를 수정하지 못하도록 되어 있는데, lombok의 target 폴더를 보면 코드가 수정되어있는 것을 확인할 수 있다. 이래서 몇몇 개발자 분들은 lombok은 해킹과 같다라고 하기도 한다고..
+그래서 lombok의 대안책으로 AutoValue, Immutable 등을 사용한다고 한다. (이것들은 코드를 수정하지 않는다.)
 
 ## annotation processor API
 ---
@@ -21,18 +23,17 @@ AbstractProcessor를 상속하는 클래스들은 다음과 같은 구조를 따
 ```java
 public class BuilderProcessor extends AbstractProcessor {
 
-		@Override
-		public synchronized void init(ProcessingEnvironment env){ }		
+	@Override
+	public synchronized void init(ProcessingEnvironment env){ }		
 
-		@Override
-		public Set<String> getSupportedAnnotationTypes() { }
+	@Override
+	public Set<String> getSupportedAnnotationTypes() { }
 
-		@Override
-		public SourceVersion getSupportedSourceVersion() { }
+	@Override
+	public SourceVersion getSupportedSourceVersion() { }
 
     @Override
-    public boolean process(Set<? extends TypeElement> annotations, 
-      RoundEnvironment roundEnv) {
+    public boolean process(Set<? extends TypeElement> annotations, RoundEnvironment roundEnv) {
         return false;
     }
 }
@@ -48,7 +49,7 @@ public class BuilderProcessor extends AbstractProcessor {
 
 ## annotation processor의 등록
 ---
-annotation processor를 등록하기 위해서는 `.jar` 을 컴파일러의 class path에 추가해야 한다. 이를 자동으로 선택하려면 META-INF/services 에 위치한 j*avax.annotation.processing.Processor 라는 파일도 패키징 해야 한다. 이 파일에는 프로세서의 풀 패키지 경로를 추가하면 된다.*
+annotation processor를 등록하기 위해서는 `.jar` 을 컴파일러의 class path에 추가해야 한다. 이를 자동으로 선택하려면 META-INF/services 에 위치한 *javax.annotation.processing.Processor 라는 파일도 패키징 해야 한다. 이 파일에는 프로세서의 풀 패키지 경로를 추가하면 된다.*
 
 Maven을 사용하여 이 jar 파일을 빌드 하려고 하면 오류가 발생한다. javax.annotation.processing.Processor 파일을 사용하려는 시점이 소스를 컴파일할 때가 아닌데, 이거를 소스를 컴파일하는 시점에 이 프로세서가 동작을 하려고 한다. 그런데 그 시점에는 아직 프로세서가 없어서 오류가 발생한다. 
 
@@ -64,3 +65,4 @@ Maven을 사용하여 이 jar 파일을 빌드 하려고 하면 오류가 발생
 - [어노테이션 프로세싱 101](http://hannesdorfmann.com/annotation-processing/annotationprocessing101/)
 
 - [Processor Interface 에 대한 doc](https://docs.oracle.com/javase/8/docs/api/javax/annotation/processing/Processor.html)
+- [더 자바, 코드를 조작하는 다양한 방법](https://www.inflearn.com/course/the-java-code-manipulation/dashboard)
