Edit: 빈의 스코프 참고자료 추가

--- a/SpringCore/빈의스코프.md
+++ b/SpringCore/빈의스코프.md
@@ -29,3 +29,6 @@
 ## 싱글톤 타입의 빈을 사용시 주의할 점
 - 프로퍼티가 공유된다. 싱글톤 빈이 어떤 데이터를 가지고 있다고 할 때 thread-safe하다고 보장받을 수 없다. 여러 thread에서 같은 곳을 바라보고 있기 때문에 항상 주의해야 한다.
 - ApplicationContext 초기 구동시 인스턴스가 생성이 된다. 그래서 애플리케이션을 구동할 때 시간이 좀 더 걸릴 수 있다.
+
+## 참고자료
+[스프링 프레임워크 핵심 기술](https://www.inflearn.com/course/spring-framework_core/dashboard)
