Add: LIVE-STUDY_2주차-타입변환과 배열

--- a/자바/live-study/2주차.md
+++ b/자바/live-study/2주차.md
@@ -105,8 +105,10 @@ int a;
 자바에서는 다음과 같은 종류의 변수들이 있다.
 - 인스턴스 변수(non-static field)
     - `static`키워드 없이 선언된 필드이다. 클래스의 인스턴스 별로 서로 다른 값을 가질 수 있기 때문에 인스턴스 변수라 불린다.
+    - 인스턴스가 생성될 때 생성된다.
 - 클래스 변수(static field)
     - `static`키워드로 선언된 필드이다. 인스턴스화 된 횟수와 상관 없이 클래스별로 하나의 값을 가질 수 있다. 클래스명으로 접근이 가능하고 클래스 하나에 하나의 값이기 때문에 클래스 변수라 불린다.
+    - 클래스가 로딩될 때 생성된다.
 - 지역 변수
     - 메서드 영역에 선언되는 변수로 다른 클래스에서 접근할 수 없는 변수이다.
 - 매개 변수
@@ -125,10 +127,109 @@ int a;
     - 라이프타임 : 변수가 선언된 블록을 벗어날 때까지
 
 ## 타입 변환, 캐스팅 그리고 타입 프로모션
+자바는 데이터 타입이 맞지 않을 때 타입 변환을 지원한다. 
+
+### 확장 (자동 형변환)
+확장은 두 개의 데이터 타입이 맞지 않아 자동적으로 바뀔 때 일어난다. 조건이 있는데,
+- 두 개의 타입이 호환이 되어야 한다.
+- 작은 크기의 데이터 타입의 값을 큰 크기의 데이터 값에 할당할 때 일어난다.
+
+자바에서 숫자 타입의 데이터는 
+```
+ byte -> short -> int -> long -> float -> double
+```
+순으로 일어난다.
+
+### 축소 (명시적 형변환)
+축소는 큰 데이터 타입의 값을 작은 크기의 데이터 타입에 넣으려 할 때 발생한다.
+- 자동 형변환이 일어나지 않을 때 사용한다.
+- 호환되지 않는 데이터 타입에서도 사용할 수 있다.
+
+### 타입 프로모션
+식을 계산할 때, 중간에 피연산자의 값의 범위를 넘어버리는 경우가 발생하는데, 이때 자동으로 값이 승격된다. 이를 타입 프로모션이라고 한다.
+- 자바에서는 byte, short, char 값이 int로 프로모션된다.
+- 피연산자가 long, float, double 인 경우, 전체 표현식이 각각 long, float, double로 프로모션된다.
+
 
 ## 1차 및 2차 배열 선언하기
+배열은 같은 타입의 많은 양의 데이터를 다루는 특별한 객체이다. 배열에 담기는 값들은 배열의 타입에 따라 결정이 된다. 만약 다른 타입을 저장하려고 하면 Type mismatch(타입 불일치) 컴파일 오류가 발생한다. 
+
+배열의 또 다른 특징은 배열은 한 번 생성되면, 그 크기를 늘리거나 줄일 수 없다. 
+
+### 배열 타입
+배열 변수는 참조 변수에 속한다. 그렇기에 배열은 객체이고 힙 영역에 생성되며 배열 변수는 힙 영역의 배열 객체를 참조하게 된다. 
+
+또한 배열은 인스턴스인데, `java.lang.Object`를 상속받는다. 따라서 배열은 `Cloneable interface`를 구현한다. 그렇기에 배열을 복사하면 객체 자신의 메모리 주소를 복사하게 된다.
+
+
+### 배열 선언
+배열을 사용하기 위해선, 배열변수를 선언해야 한다. 다음과 같이 작성할 수 있다.
+```java
+타입[] 변수;
+
+타입 변수[];
+```
+```java
+int[] intArray;
+double[] doubleArray;
+
+int intArray[];
+double doubleArray[];
+```
+
+이제 배열을 생성해보자. 
+- 먼저 값 목록을 통해 배열을 생성하는 법을 보자.
+    ```java
+    int[] intArray = {1, 2, 3, 4, 5};
+    ```
+    다음과 같이 {}는 주어진 값들을 항목으로 가지는 배열 객체를 힙에 생성하고 배열 객체의 번지를 리턴하게 된다.
+
+    값 목록을 통해 배열을 생성할 떄 주의할 점은, 배열 변수를 이미 선언한 후 다른 실행문에서 중괄호를 사용한 배열 생성은 불가능하다.
+
+    ```java
+    int[] intArray;
+    intArray = {1, 2, 3, 4, 5}; // 컴파일 에러
+    ```
+
+    이때는 다음과 같이 `new`연산자를 사용해 값 목록을 지정해 주면 된다.
+    ```java
+    int[] intArray;
+    intArray = new int[] {1, 2, 3, 4, 5};
+    ```
+- `new`연산자로 배열 생성
+    값의 목록을 모르지만, 후에 사용할 배열을 미리 만들고 싶다면 `new`연산자를 사용한다.
+    ```java
+    int[] intArray = new int[5];
+    ```
+    배열을 생성하는데 있어서 배열의 크기를 지정해주는데, []안에 정수 값을 집어 넣어준다.
+
+    위와 같이 `new` 연산자를 사용할 경우 초기값이 들어가 있는데 타입별로 살펴보자.
+    | 분류 | 데이터 타입 | 초기값 |
+    |-----|----------|------|
+    | 기본 타입 | byte[] | 0
+    | | char[] | '\u0000'
+    | | short[] | 0
+    | | int[] | 0
+    | | long[] | 0L
+    | | float[] | 0.0F 
+    | | double[] | 0.0
+    | | boolean[] | false
+    | 참조 타입 | 클래스[] | null
+    | | 인터페이스[] | null
+
+### 2차원 배열
+2차원 배열은 배열을 이루는 값들이 배열인 배열을 말한다(요소 자체가 배열). 자바는 2차원 배열을 중첩 배열 방식으로 구현한다.
+
+다음과 같이 사용한다.
+```java
+int[][] intArrays = new int[2][3];
+```
+2차원 배열은 각 요소 배열간 길이가 다를 수 있다.
 
 ## 타입 추론, var
+타입 추론이란, 타입이 정해지지 않은 변수에 대해서 컴파일러가 변수의 타입을 스스로 찾아낼 수 있도록 하는 기능이다.
+
+
 
 ## 참고자료
 [이것이 자바다](http://www.yes24.com/Product/Goods/15651484)
@@ -138,3 +239,7 @@ int a;
 [밸덩 변수의 스코프](https://www.baeldung.com/java-variable-scope)
 
 [변수의 스코프와 라이프타임](https://www.learningjournal.guru/article/programming-in-java/scope-and-lifetime-of-a-variable/)
+
+[GeeksForGeeks, Type-Conversion](https://www.geeksforgeeks.org/type-conversion-java-examples/)
+
+[stack overflow, java array cloneable](https://stackoverflow.com/questions/19852751/how-do-java-arrays-implement-cloneable)
