Add: LIVE-STUDY_2주차

--- a/자바/live-study/2주차.md
+++ b/자바/live-study/2주차.md
@@ -229,7 +229,51 @@ int[][] intArrays = new int[2][3];
 ## 타입 추론, var
 타입 추론이란, 타입이 정해지지 않은 변수에 대해서 컴파일러가 변수의 타입을 스스로 찾아낼 수 있도록 하는 기능이다.
 
+Java9까지는 우리는 변수를 사용할 때 명시적으로 데이터의 타입을 선언했어야 했다.
+```java
+String message = "Good bye, Java 9";
+```
+하지만 Java10부터 우리는 다음과 같이 타입 추론을 사용할 수 있다.
+```java
+var message = "Hello, Java 10";
+```
+우리는 `message`에 따로 데이터 타입을 제공해 주지 않고, 단순히 `var`라고 지정함으로써 컴파일러가 `message`의 타입을 오른쪽에 있는 값, 리터럴로 타입을 추론할 수 있는 것이다. 
 
+중요한 점이 있는데, `var`은 초기화 값이 있는 지역 변수로만 사용이 가능하다는 것이다.
+
+`var`은 멤버변수, 메서드의 파리미터, 리턴 타입으로는 사용이 불가능하다. 이런데도 `var`을 사용하는 이유는 뭘까..?
+```java
+Map<Integer, String> map = new HashMap<>();
+```
+```java
+var map = new HashMap<Integer, String>();
+```
+`var`을 사용하게 되면 변수의 타입이 아닌, 변수의 이름에 집중할 수 있게 된다. 또 한 가지 기억해야 할 것이 있다면, `var`은 키워드가 아니다. 어떠한 타입도 아니고, 클래스에 사용할 수 있는 예약어가 아니라는 소리다. 
+
+마지막으로 `var`는 런타임 오버헤드가 없으며 Java를 동적으로 유형이 지정된 언어로 만들지 않는다. 변수의 타입은 컴파일 시간에 결정이 되고, 후에 변경할 수 없다.
+
+### var의 잘못된 사용
+`var`의 잘못된 사용을 보자.
+- ```java
+    var n;
+    ```
+    - 초기화 없이 `var`를 사용할 수 없다.
+- ```java
+    var emptyList = null;
+    ```
+    - null로 초기화 할 수 없다.
+- ```java
+    public var = "hello";
+    ```
+    - 지역변수가 아닌 변수는 var을 사용할 수 없다.
+- ```java
+    var p = (String s) -> s.length() > 10;
+    ```
+    - 람다식은 명시적인 타입이 필요하다. 
+- ```java
+    var arr = {1, 2, 3};
+    ```
+    - 배열은 명시적인 타입이 필요하다.
 
 ## 참고자료
 [이것이 자바다](http://www.yes24.com/Product/Goods/15651484)
@@ -243,3 +287,5 @@ int[][] intArrays = new int[2][3];
 [GeeksForGeeks, Type-Conversion](https://www.geeksforgeeks.org/type-conversion-java-examples/)
 
 [stack overflow, java array cloneable](https://stackoverflow.com/questions/19852751/how-do-java-arrays-implement-cloneable)
+
+[밸덩 LocalVariable Type inference](https://www.baeldung.com/java-10-local-variable-type-inference)
