--- a/자바/live-study/3주차.md
+++ b/자바/live-study/3주차.md
@@ -12,3 +12,129 @@
 - 연산자 우선 순위
 - (optional) Java 13. switch 연산자
 
+## 산술 연산자
+| 연산자 | 피연산자 수 | 산출 값 | 설명 |
+| ----- | -------  | ----- | --- |
+| + | 이항 | 숫자 | 덧셈 연산
+| - | 이항 | 숫자 | 뺄셈 연산
+| * | 이항 | 숫자 | 곱셈 연산
+| / | 이항 | 숫자 | 좌측 피연산자를 우측 피연산자로 나눗셈 연산
+| % | 이항 | 숫자 | 좌측 피연산자를 우측 피연산자로 나눈 나머지를 구하는 연산
+
+자바에는 다음가 같은 산술 연산자들이 있다. 산술 연산자의 경우 숫자 타입(byte, short, int, long, float, double)으로 결과가 나온다. 
+
+사용법을 보자.
+```java
+int a = 4;
+int b = 5;
+        
+System.out.println("a + b: " + (a + b));
+System.out.println("a - b: " + (a - b));
+System.out.println("a * b: " + (a * b));
+System.out.println("a / b: " + (a / b));
+System.out.println("a % b: " + (a % b));
+```
+```
+a + b: 9
+a - b: -1
+a * b: 20
+a / b: 0
+a % b: 4
+```
+
+## 비트 연산자
+비트 연산자는 데이터를 비트 단위로 연산한다. 주의할 점은 실수 타입인 float, double은 비트 연산이 불가능하다는 것이다. 비트 연산자는 기능에 따라 비트 논리 연산자(&, |, ^, ~)와 비트 이동 연산자(<<, >>, >>>)로 구분한다.
+
+비트 논리 연산자
+| 연산자 | 피연산자 수 | 산출 값 | 설명 |
+| ----- | -------  | ----- | --- |
+| & | 이항 | 숫자 | 두 비트 모두 1일 경우에만 연산 결과가 1
+| \| | 이항 | 숫자 | 두 비트 중 하나만 1이면 연산 결과가 1
+| ^ | 이항 | 숫자 | 두 비트 중 하나는 1이고 다른 하나가 0일 경우 연산결과가 1
+| ~ | 단항 | 숫자 | 보수
+
+사용법을 보자.
+```java
+int a = 3;  // 0000 0011
+int b = 4;  // 0000 0100
+
+System.out.println("a & b: " + (a & b));
+System.out.println("a | b: " + (a | b));
+System.out.println("a ^ b: " + (a ^ b));
+System.out.println("~a: " + ~a);
+System.out.println("~b: " + ~b);
+```
+```
+a & b: 0
+a | b: 7
+a ^ b: 7
+~a: -4
+~b: -5
+```
+비트 연산자는 피연산자를 int 타입으로 자동 타입 변환한 후 연산을 수행하게 된다. 그렇기에 비트 연산의 결과 타입은 int 타입이 된다.
+
+## 관계 연산자
+| 연산자 | 피연산자 수 | 산출 값 | 설명 |
+| ----- | -------  | ----- | --- |
+| == | 이항 | boolean | 두 개의 항이 같으면 참, 다르면 거짓을 반환한다.
+| != | 이항 | boolean | 두 개의 항이 다르면 참, 같으면 거짓을 반환한다.
+| > | 이항 | boolean | 왼쪽에 있는 항이 더 크면 참, 그렇지 않으면 거짓을 반환한다.
+| < | 이항 | boolean | 오른쪽에 있는 항이 더 크면 참, 그렇지 않으면 거짓을 반환한다.
+| >= | 이항 | boolean | 왼쪽에 있는 항이 더 크거나 같으면 참, 그렇지 않으면 거짓을 반환한다.
+| <= | 이항 | boolean | 오른쪽에 있는 항이 더 크거나 같으면 참, 그렇지 않으면 거짓을 반환한다.
+
+```java
+System.out.println("1 == 1: " + (1 == 1));
+System.out.println("2 != 2: " + (2 != 2));
+System.out.println("1 > 3: " + (1 > 3));
+System.out.println("1 < 3: " + (1 < 3));
+System.out.println("2.3 >= 2: " + (2.3 >= 2));
+System.out.println("3.1 <= 3: " + (3.1 <= 3));
+```
+```
+1 == 1: true
+2 != 2: false
+1 > 3: false
+1 < 3: true
+2.3 >= 2: true
+3.1 <= 3: false
+```
+관계연산자는 비교연산자로, boolean 값인 true와 false를 반환한다. 
+
+## 논리 연산자
+| 연산자 | 피연산자 수 | 산출 값 | 설명 |
+| ----- | -------  | ----- | --- |
+| && | 이항 | boolean | 피연산자 모두가 true일 경우에만 true를 반환한다.
+| \|\|| 이항| boolean | 피연산자 중 하나만 true이면 true를 반환한다.
+| ! | 단항 | boolean | 피연산자의 논리 값을 바꾼다.
+
+```java
+System.out.println("true && false: " + (true && false));
+System.out.println("true && true: " + (true && true));
+System.out.println("true || false: " + (true || false));
+System.out.println("true || true: " + (true || true));
+System.out.println("false || false: " + (false || false));
+System.out.println("!true: " + !true);
+System.out.println("!false: " + !false);
+System.out.println("!false: " + !false);
+```
+```
+true && false: false
+true && true: true
+true || false: true
+true || true: true
+false || false: false
+!true: false
+!false: true
+```
+
+논리 연산자는 비트 연산과 비슷하지만 피연산자가 boolean 타입의 논리 값이다.
+
+## instanceof
+
+
+## assignment(=) operator
+## 화살표(->) 연산자
+## 3항 연산자
+## 연산자 우선 순위
+## (optional) Java 13. switch 연산자
