Add: LIVE-STUDY_과제0 JUnit5

--- a/자바/live-study/4주차.md
+++ b/자바/live-study/4주차.md
@@ -195,6 +195,82 @@ num = 0
 - 인텔리J, 이클립스, VS Code에서 JUnit 5로 테스트 코드 작성하는 방법에 익숙해 질 것.
 - 이미 JUnit 알고 계신분들은 다른 것 아무거나!
 
+### JUnit5란 무엇인가?
+JUnit5는 무엇일까? JUnit5는 여러 서브 프로젝트의 모듈들로 구성되어 있다.
+```
+JUnit5 = JUnit Platform + JUnit Jupiter + JUnit Vintage
+```
+각 서브 프로젝트에 대해 알아보자.
+- Platform
+    - 테스트를 실행해주는 런쳐를 제공한다. 
+    - TestEngine API를 제공한다.
+- Jupiter
+    - TestEngine API구현체로 JUnit5를 제공한다.
+    - Platform에서 사용하는 TestEngine은 Jupiter를 통해 제공하는 것이다.
+- Vintage
+    - JUnit4와 3를 지원하는 TestEngine구현체이다.
+
+Platform이 JVM에서 테스트 프레임워크를 실행시키는 근간이 되며, 이를 실제적으로 구현한 것이 Jupiter와 Vintage이다.
+
+한 가지 알아야 할 것은 런타임시 자바8이상을 필요로 한다는 것이다. 하지만 이전 버전의 JDK로 컴파일된 테스트 코드는 실행가능하다.
+
+### 스프링에서 JUnit5 사용하기
+스프링에서 JUnit5을 사용하기 위해서는 기본으로 JUnit5 의존성이 추가되어 있는 2.2+버전의 스프링 부트 프로젝트를 만들면 된다. 
+
+스프링 프로젝트를 만들지 않는다면 gradle환경에서는 다음과 같이 작성하면 된다.
+```
+tasks.named('test') {
+    useJUnitPlatform()
+}
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+}
+```
+
+### 기본 애노테이션
+| Annotation | 설명 |
+| ---------- | --- |
+| @Test | 해당 메서드가 테스트 메서드임을 알린다. |
+| @BeforeAll | 모든 테스트가 실행되기 전에 한 번 실행된다. <br > static 키워드를 붙여 메서드를 정의하면 좋다. |
+| @AfterALl | 모든 테스트가 종료된 후 한 번 실행된다. <br > static 키워드를 붙여 메서드를 정의하면 좋다. |
+| @BeforeEach | 각 테스트가 실행되기 전 실행된다. |
+| @AfterEach | 각 테스트가 실행된 후 실행된다. |
+| @Disabled | 테스트 클래스 혹은 메서드를 비활성화하는데 사용한다. |
+| @DisplayNameGeneration | Method와 Class레퍼런스를 이용해 테스트 이름을 표기한다. <br > 기본 구현체로 ReplaceUnderscores를 제공한다. |
+| @DisplayName | 어떤 테스트인지 테스트 이름을 보다 쉽게 표현할 수 있게 해주는 애노테이션이다. |
+| @Timeout | 주어진 시간을 초과할 경우, 테스트 실패를 나타내기 위해 사용한다. |
+
+이것말고도 다양한 애노테이션이 존재한다. ->
+[JUnit5 Annotations](https://junit.org/junit5/docs/current/user-guide/#writing-tests-annotations)
+
+### Assertion
+Jupiter는 JUnit4에 있는 많은 Assertion 메서드와 함께 제공되고 Java8의 람다식과 함께 사용하기에 적합한 몇 가지를 추가한다. 모든 JUnit Jupiter의 Assertion은 정적 메서드로 정의되어 있다.
+
+```java
+@Test
+void assertion() {
+    Study startedStudy = new Study();
+    Study endedStudy = new Study();
+    Study exceptionStudy = new Study(-1);
+
+    startedStudy.setStatus(StudyStatus.STARTED);
+    endedStudy.setStatus(StudyStatus.ENDED);
+
+    // 기본 assertion
+    assertEquals(StudyStatus.STARTED, startedStudy.getStatus());
+
+    // 그룹 assertion -> 여러 테스트 실패를 한 번에 확인할 수 있다.
+    assertAll(
+            () -> assertNotNull(startedStudy),
+            () -> assertEquals(StudyStatus.ENDED, endedStudy.getStatus())
+    );
+
+    // 예외
+    assertThrows(IllegalArgumentException.class, () -> exceptionStudy.getLimit());
+}
+```
+
 ## 과제 1. live-study 대시 보드를 만드는 코드를 작성하세요.
 - 깃헙 이슈 1번부터 18번까지 댓글을 순회하며 댓글을 남긴 사용자를 체크 할 것.
 - 참여율을 계산하세요. 총 18회에 중에 몇 %를 참여했는지 소숫점 두자리가지 보여줄 것.
@@ -207,6 +283,8 @@ num = 0
 - ListNode add(ListNode head, ListNode nodeToAdd, int position)를 구현하세요.
 - ListNode remove(ListNode head, int positionToRemove)를 구현하세요.
 - boolean contains(ListNode head, ListNode nodeTocheck)를 구현하세요.
+
+
 
 ## 과제 3. Stack을 구현하세요.
 - int 배열을 사용해서 정수를 저장하는 Stack을 구현하세요.
@@ -221,3 +299,7 @@ num = 0
 ## 과제 5. Queue를 구현하세요.
 - 배열을 사용해서 한번
 - ListNode를 사용해서 한번.
+
+
+## 참고자료
+[JUnit5 공식문서](https://junit.org/junit5/docs/current/user-guide/#overview)
