Add: LIVE-STUDY_과제1

--- a/자바/live-study/4주차.md
+++ b/자바/live-study/4주차.md
@@ -277,6 +277,77 @@ void assertion() {
 - Github 자바 라이브러리를 사용하면 편리합니다.
 - 깃헙 API를 익명으로 호출하는데 제한이 있기 때문에 본인의 깃헙 프로젝트에 이슈를 만들고 테스트를 하시면 더 자주 테스트할 수 있습니다.
 
+```java
+public class GithubConnection {
+
+    private GitHub gitHub;
+    private GHRepository repo;
+
+    private final String REPO_NAME = "whiteship/live-study";
+
+    private Map<String, Set<Integer>> userDashboard;
+    private Map<String, Double> userAttendanceRate;
+
+    public GithubConnection(String token) throws IOException {
+        GitHubBuilder ghBuilder = new GitHubBuilder();
+
+        gitHub = ghBuilder.withOAuthToken(token).build();
+        repo = gitHub.getRepository(REPO_NAME);
+        userDashboard = new HashMap<>();
+        userAttendanceRate = new HashMap<>();
+    }
+
+    private List<GHIssue> getGhIssues() throws IOException {
+        return repo.getIssues(GHIssueState.ALL);
+    }
+
+    private List<GHIssueComment> getGhIssueComments(GHIssue issue) throws IOException {
+        return issue.getComments();
+    }
+
+    private GHUser getAuthor(GHIssueComment comment) throws IOException {
+        return comment.getUser();
+    }
+
+    private void setUserDashBoard(List<GHIssue> issues) throws IOException {
+        for (GHIssue issue : issues) {
+            for (GHIssueComment comment : getGhIssueComments(issue)) {
+                String loginId = getAuthor(comment).getLogin();
+                int issueNumber = issue.getNumber();
+
+                if (userDashboard.containsKey(loginId)) {
+                    userDashboard.get(loginId).add(issueNumber);
+                } else {
+                    userDashboard.put(loginId, new HashSet<>(Arrays.asList(issueNumber)));
+                }
+            }
+        }
+    }
+
+    private void setAttendanceRate() throws IOException {
+        List<GHIssue> issues = getGhIssues();
+        setUserDashBoard(issues);
+
+        double issueCount = issues.size();
+
+        for (String author : userDashboard.keySet()) {
+            double attendanceRate = userDashboard.get(author).size() / issueCount;
+            userAttendanceRate.put(author, attendanceRate);
+        }
+    }
+
+    public void showDashboard() throws IOException {
+        setAttendanceRate();
+
+        for (String author : userAttendanceRate.keySet()) {
+            System.out.print("참여자 : " + author);
+            System.out.printf(", 참여율 : %.2f", userAttendanceRate.get(author) * 100);
+            System.out.println(" %");
+        }
+    }
+}
+```
+
 ## 과제 2. LinkedList를 구현하세요.
 - LinkedList에 대해 공부하세요.
 - 정수를 저장하는 ListNode 클래스를 구현하세요.
@@ -303,3 +374,5 @@ void assertion() {
 
 ## 참고자료
 [JUnit5 공식문서](https://junit.org/junit5/docs/current/user-guide/#overview)
+
+[더 자바, 애플리케이션을 테스트하는 다양한 방법](https://www.inflearn.com/course/the-java-application-test/dashboard)
