Add: LIVE-STUDY_과제1:LinkedList

--- a/자바/live-study/4주차.md
+++ b/자바/live-study/4주차.md
@@ -355,7 +355,179 @@ public class GithubConnection {
 - ListNode remove(ListNode head, int positionToRemove)를 구현하세요.
 - boolean contains(ListNode head, ListNode nodeTocheck)를 구현하세요.
 
+ListNode 클래스
+```java
+public class ListNode {
 
+    private Integer item;
+    private ListNode next;
+
+    public ListNode() {
+        item = null;
+        next = null;
+    }
+
+    public ListNode(int item) {
+        this.item = item;
+        this.next = null;
+    }
+
+    public ListNode add(ListNode head, ListNode nodeToAdd, int position) {
+        if (position < 0) {
+            throw new IndexOutOfBoundsException("유효한 위치가 아닙니다.");
+        }
+
+        ListNode before = head;
+        ListNode cur = head.getNext();
+
+        while (position-- > 0) {
+            if (cur == null) {
+                throw new IndexOutOfBoundsException("유효한 위치가 아닙니다.");
+            }
+
+            before = cur;
+            cur = cur.getNext();
+        }
+
+        before.setNext(nodeToAdd);
+        nodeToAdd.setNext(cur);
+        return nodeToAdd;
+    }
+
+    public ListNode remove(ListNode head, int positionToRemove) {
+        if (positionToRemove < 0) {
+            throw new IndexOutOfBoundsException("유효한 범위가 아닙니다.");
+        }
+
+        ListNode before = head;
+        ListNode cur = head.getNext();
+        while (positionToRemove-- > 0) {
+            before = cur;
+            cur = cur.getNext();
+
+            if (cur == null) {
+                throw new IndexOutOfBoundsException("유효한 범위가 아닙니다.");
+            }
+        }
+
+        before.setNext(cur.getNext());
+        return cur;
+    }
+
+    public boolean contains(ListNode head, ListNode nodeToCheck) {
+        while (head != null) {
+            if (head == nodeToCheck) {
+                return true;
+            }
+            head = head.getNext();
+        }
+
+        return false;
+    }
+
+    public ListNode getNode(ListNode head, int position) {
+        if (position < 0) {
+            throw new IndexOutOfBoundsException("유효한 위치가 아닙니다.");
+        }
+
+        ListNode cur = head.getNext();
+        while (position-- > 0) {
+            if (cur == null) {
+                throw new IndexOutOfBoundsException("유효한 위치가 아닙니다.");
+            }
+            cur = cur.getNext();
+        }
+
+        return cur;
+    }
+
+    public Integer getItem() {
+        return item;
+    }
+
+    public ListNode getNext() {
+        return next;
+    }
+
+    public void setNext(ListNode next) {
+        this.next = next;
+    }
+}
+```
+ListNode 테스트 코드
+```java
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
+class ListNodeTest {
+
+    private ListNode head;
+    private ListNode first;
+
+    @BeforeAll
+    void init() {
+        head = new ListNode();
+        first = new ListNode(1);
+        head.setNext(first);
+        head.add(head, new ListNode(2), 1);
+        head.add(head, new ListNode(3), 2);
+        head.add(head, new ListNode(4), 3);
+        head.add(head, new ListNode(5), 4);
+    }
+
+    @DisplayName("리스트에 있는 모든 노드를 출력합니다.")
+    @Test
+    void print_list() {
+        while (head != null) {
+            head = head.getNext();
+            System.out.println(head);
+        }
+    }
+
+    @DisplayName("연결리스트에 노드를 더합니다.")
+    @Test
+    void add_node() {
+        ListNode firstNode = new ListNode(0);
+        head.add(head, firstNode, 0);
+
+        assertThat(head.getNode(head, 0)).isEqualTo(firstNode);
+        assertThat(head.getNode(head, 1)).isEqualTo(first);
+    }
+
+    @DisplayName("연결리스트에 노드를 더하는 것이 실패합니다.")
+    @Test
+    void fail_add_node() {
+        ListNode newNode = new ListNode(-1);
+
+        assertThrows(IndexOutOfBoundsException.class, () -> head.add(head, newNode, -1));
+        assertThrows(IndexOutOfBoundsException.class, () -> head.add(head, newNode, 100));
+    }
+
+    @DisplayName("연결리스트에 지정한 위치의 노드를 삭제합니다.")
+    @Test
+    void remove_node() {
+        assertThat(head.remove(head, 2).getItem()).isEqualTo(3);
+        assertThat(head.remove(head, 0)).isEqualTo(first);
+    }
+
+    @DisplayName("연결리스트에 지정한 위치의 노드를 삭제하는 것이 실패합니다.")
+    @Test
+    void fail_remove_node() {
+        assertThrows(IndexOutOfBoundsException.class, () -> head.remove(head, -1));
+        assertThrows(IndexOutOfBoundsException.class, () -> head.remove(head, 5));
+    }
+
+    @DisplayName("연결리스트에 특정한 노드가 있는지 확인합니다.")
+    @Test
+    void contains_node() {
+        ListNode newNode = new ListNode(100);
+        ListNode newNode2 = new ListNode(1000);
+
+        head.add(head, newNode, 4);
+
+        assertTrue(head.contains(head, newNode));
+        assertFalse(head.contains(head, newNode2));
+    }
+}
+```
 
 ## 과제 3. Stack을 구현하세요.
 - int 배열을 사용해서 정수를 저장하는 Stack을 구현하세요.
@@ -373,6 +545,8 @@ public class GithubConnection {
 
 
 ## 참고자료
+[이것이 자바다](http://www.yes24.com/Product/Goods/15651484)
+
 [JUnit5 공식문서](https://junit.org/junit5/docs/current/user-guide/#overview)
 
 [더 자바, 애플리케이션을 테스트하는 다양한 방법](https://www.inflearn.com/course/the-java-application-test/dashboard)
