Add: LIVE-STUDY_과제3-Stack

--- a/자바/live-study/4주차.md
+++ b/자바/live-study/4주차.md
@@ -534,6 +534,91 @@ class ListNodeTest {
 - void push(int data)를 구현하세요.
 - int pop()을 구현하세요.
 
+Stack 클래스
+```java
+public class Stack {
+
+    private int[] stack;
+    private int top;
+
+    public Stack(int size) {
+        stack = new int[size];
+        top = -1;
+    }
+
+    public void push(int data) {
+        if (top+1 >= stack.length) {
+            int[] tmp = new int[stack.length+1];
+
+            IntStream.range(0, stack.length).forEach(i -> tmp[i] = stack[i]);
+            stack = tmp;
+        }
+        stack[++top] = data;
+    }
+
+    public int pop() {
+        if (top < 0) {
+            throw new IndexOutOfBoundsException("제거할 항목이 없습니다.");
+        }
+        return stack[top--];
+    }
+
+    public int peek() {
+        if (top < 0) {
+            throw new IndexOutOfBoundsException("스택이 비어있습니다.");
+        }
+
+        return stack[top];
+    }
+    @Override
+    public String toString() {
+        return Arrays.toString(stack);
+    }
+}
+```
+테스트 코드
+```java
+class StackTest {
+
+    @Test
+    void push() {
+        Stack stack = new Stack(3);
+
+        stack.push(1);
+        stack.push(2);
+
+        assertEquals(stack.peek(), 2);
+
+        stack.push(3);
+        stack.push(4);
+        stack.push(5);
+
+        assertEquals(stack.peek(), 5);
+    }
+
+    @Test
+    void pop() {
+        Stack stack = new Stack(3);
+
+        stack.push(1);
+        stack.push(2);
+        stack.push(3);
+
+        int data = stack.pop();
+
+        assertAll(
+                () -> assertThat(data).isEqualTo(3),
+                () -> assertThat(stack.peek()).isEqualTo(2)
+        );
+
+        stack.pop();
+        stack.pop();
+
+        assertThrows(IndexOutOfBoundsException.class, () -> stack.pop());
+    }
+}
+```
+
 ## 과제 4. 앞서 만든 ListNode를 사용해서 Stack을 구현하세요.
 - ListNode head를 가지고 있는 ListNodeStack 클래스를 구현하세요.
 - void push(int data)를 구현하세요.
