Add: LIVE-STUDY_과제4

--- a/자바/live-study/4주차.md
+++ b/자바/live-study/4주차.md
@@ -624,9 +624,91 @@ class StackTest {
 - void push(int data)를 구현하세요.
 - int pop()을 구현하세요.
 
+```java
+public class ListNodeStack {
+
+    private ListNode head;
+
+    public ListNodeStack(ListNode head) {
+        this.head = head;
+    }
+
+    public void push(int data) {
+        ListNode newNode = new ListNode(data);
+
+        newNode.setNext(head.getNext());
+        head.setNext(newNode);
+    }
+
+    public int pop() {
+        if (head.getNext() == null) {
+            throw new IllegalStateException("스택이 비어있습니다.");
+        }
+
+        int data = head.getNext().getItem();
+        head.setNext(head.getNext().getNext());
+
+        return data;
+    }
+
+    public int peek() {
+        return head.getNext().getItem();
+    }
+}
+```
+```java
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
+class ListNodeStackTest {
+
+    ListNode head;
+    ListNodeStack stack;
+
+    @BeforeAll
+    void init() {
+        head = new ListNode();
+        stack = new ListNodeStack(head);
+    }
+
+    @Test
+    void push() {
+        stack.push(1);
+        stack.push(2);
+
+        assertThat(stack.peek()).isEqualTo(2);
+
+        stack.push(3);
+
+        assertThat(stack.peek()).isEqualTo(3);
+    }
+
+    @Test
+    void pop() {
+        stack.push(1);
+        stack.push(2);
+        stack.push(3);
+
+        assertAll(
+                () -> assertThat(stack.pop()).isEqualTo(3),
+                () -> assertThat(stack.pop()).isEqualTo(2),
+                () -> assertThat(stack.pop()).isEqualTo(1)
+        );
+    }
+
+    @Test
+    void fail_pop() {
+        head = new ListNode();
+        stack = new ListNodeStack(head);
+
+        assertThrows(IllegalStateException.class, () -> stack.pop());
+    }
+}
+```
+
 ## 과제 5. Queue를 구현하세요.
 - 배열을 사용해서 한번
 - ListNode를 사용해서 한번.
+
+
 
 
 ## 참고자료
