Add: LIVE-STUDY_4주차

--- a/자바/live-study/4주차.md
+++ b/자바/live-study/4주차.md
@@ -708,8 +708,169 @@ class ListNodeStackTest {
 - 배열을 사용해서 한번
 - ListNode를 사용해서 한번.
 
+배열을 사용한 queue
+```java
+public class Queue {
 
+    private int[] queue;
+    private int tailIdx;
 
+    public Queue(int size) {
+        queue = new int[size];
+        tailIdx = -1;
+    }
+
+    public void add(int data) {
+        if (tailIdx >= queue.length-1) {
+            int[] tmp = new int[queue.length+1];
+            for (int i = 0; i < queue.length; i++) {
+                tmp[i] = queue[i];
+            }
+
+            queue = tmp;
+        }
+
+        queue[++tailIdx] = data;
+    }
+
+    public int poll() {
+        if (tailIdx < 0) {
+            throw new IllegalStateException("꺼낼 항목이 없습니다.");
+        }
+
+        int data = queue[0];
+        for (int i = 0; i < tailIdx; i++) {
+            queue[i] = queue[i+1];
+        }
+        tailIdx--;
+        return data;
+    }
+
+    public int peek() {
+        if (tailIdx < 0) {
+            throw new IllegalStateException("꺼낼 항목이 없습니다.");
+        }
+        return queue[0];
+    }
+
+    @Override
+    public String toString() {
+        return Arrays.toString(queue);
+    }
+}
+```
+테스트 코드
+```java
+class QueueTest {
+
+    @Test
+    void add() {
+        Queue queue = new Queue(5);
+        queue.add(1);
+        queue.add(2);
+        queue.add(3);
+        queue.add(4);
+        queue.add(5);
+        queue.add(6);
+
+        assertEquals(1, queue.peek());
+
+        System.out.println(queue);
+    }
+
+    @Test
+    void poll() {
+        Queue queue = new Queue(3);
+
+        queue.add(1);
+        queue.add(2);
+        queue.add(3);
+
+        assertAll(
+                () -> assertEquals(1, queue.poll()),
+                () -> assertEquals(2, queue.poll()),
+                () -> assertEquals(3, queue.poll())
+        );
+    }
+
+    @Test
+    void fail_poll() {
+        Queue queue = new Queue(1);
+
+        assertThrows(IllegalStateException.class, () -> queue.poll());
+    }
+}
+```
+
+ListNode를 이용한 Queue
+```java
+public class ListNodeQueue {
+
+    private ListNode head;
+    private int tailIdx;
+
+    public ListNodeQueue(ListNode head) {
+        this.head = head;
+        tailIdx = -1;
+    }
+
+    public void add(int data) {
+        head.add(head, new ListNode(data), ++tailIdx);
+    }
+
+    public int poll() {
+        if (tailIdx < 0) {
+            throw new IllegalStateException("꺼낼 항목이 없습니다.");
+        }
+        return head.remove(head, 0).getItem();
+    }
+
+    public int peek() {
+        return head.getNext().getItem();
+    }
+}
+```
+테스트 코드
+```java
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
+class ListNodeQueueTest {
+
+    private ListNode head;
+    private ListNodeQueue queue;
+
+    @BeforeEach
+    void init() {
+        head = new ListNode();
+        queue = new ListNodeQueue(head);
+    }
+
+    @Test
+    void add() {
+        queue.add(1);
+        queue.add(2);
+
+        assertEquals(1, queue.peek());
+    }
+
+    @Test
+    void poll() {
+        queue.add(1);
+        queue.add(2);
+        queue.add(3);
+
+        assertAll(
+                () -> assertEquals(1, queue.poll()),
+                () -> assertEquals(2, queue.poll()),
+                () -> assertEquals(3, queue.poll())
+        );
+    }
+
+    @Test
+    void fail_poll() {
+        assertThrows(IllegalStateException.class, () -> queue.poll());
+    }
+}
+```
 
 ## 참고자료
 [이것이 자바다](http://www.yes24.com/Product/Goods/15651484)
