--- a/자바/live-study/5주차.md
+++ b/자바/live-study/5주차.md
@@ -61,6 +61,8 @@ class Car {
     private int tireNum;
 
     // 생성자
+    public Car() {}
+
     public Car(int tireNum) {
         // ...
     }
@@ -79,6 +81,7 @@ class Car {
 - 생성자
     - 생성자는 클래스가 `new` 키워드에 의해 호출되는 특별한 중괄호 {} 블럭이다.
     - 보통 인스턴스를 초기화할 때 사용되고 생성자가 존재하지 않는다면 기본 생성자가 생성된다.
+    - 만약 어떠한 생성자라도 존재한다면 기본 생성자는 생성되지 않는다.
     - 생성자는 클래스와 이름이 같아야 하고 리턴타입이 없다.
     
 - 메서드
@@ -87,9 +90,45 @@ class Car {
 
 
 ## 객체 만드는 방법 (new 키워드 이해하기)
+클래스로부터 객체를 만드는 방법은 `new`연산자를 이용한다. 
+`new`는 클래스로부터 객체를 생성시키는 연산자이다.
+
+클래스로부터 객체를 만드는 과정은 크게 세 가지 과정을 거친다.
+1. 선언 (Declaration)
+2. 인스턴스화 (Instantiation)
+3. 초기화 (Initialization)
+
+### 선언
+첫 번째로, 변수의 클래스 타입을 정의하지만 개체를 정의하지는 않는다. 다음은 일반적인 선언 구문이다.
+```java
+Car myCar;
+```
+위의 변수는 아무것도 참조하지 않는 변수이다. `myCar`라는 변수는 `Car`라는 타입을 저장할 공간과 이에 대한 참조 값을 저장할 공간을 할당하게 된다. 
+
+### 인스턴스화
+`new`연산자를 통해 객체의 복사본을 가져와 변수에 할당해주어야 한다. 
+
+`new`연산자는 새로운 객체에 대한 메모리를 할당하해 클래스를 인스턴스화하고 메모리에 대한 참조를 반환하는 연산자다. 이 참조가 변수에 저장되는 것이다. 
+
+그래서 자바에서 모든 클래스의 객체는 동적으로 할당된다.
+
+### 초기화
+`new`연산자는 또한 새로운 객체를 초기화시킬 클래스의 생성자를 호출한다. 생성자는 클래스의 객체가 생성되었을 때 무엇을 할지 정의한다. 
+
+```java
+Car myCar = new Car();
+```
+위의 경우는 클래스의 기본 생성자를 호출하게 된다. 
+
+생성자에서 코드가 실행되면 객체가 초기화되고 초기화된 객체의 참조가 반환된다. 
+
+![](/img/new연산자.png)
 
 ## 메서드 정의하는 방법
 
 ## 생성자 정의하는 방법
 
 ## this 키워드 이해하기
+
+## 참고자료
+[new 연산자-geeksforgeeks](https://www.geeksforgeeks.org/new-operator-java/)
