--- a/자바/live-study/5주차.md
+++ b/자바/live-study/5주차.md
@@ -125,6 +125,67 @@ Car myCar = new Car();
 ![](/img/new연산자.png)
 
 ## 메서드 정의하는 방법
+메서드란 객체의 동작에 해당하는 중괄호 {} 블럭을 말한다. 중괄호 블럭의 이름은 메서드 이름이고, 메서드를 호출하게 되면 블럭에 있는 코드들이 모두 실행된다. 
+
+### 메서드 선언
+메서드 선언은 선언부(리턴타입, 메서드 이름, 매개변수선언)와 실행부로 나뉜다. 메서드 선언부를 메서드 시그니처라고도 한다. 
+```
+리턴타입 메서드이름 (매개변수 선언, ...) {
+    // 실행할 코드를 작성
+}
+```
+```java
+int solve(int number, double dNumber) {
+    // 코드 작성
+}
+```
+
+- 리턴타입
+    - 메서드가 실행 후 리턴하는 값의 타입을 말한다.
+    - 메서드는 리턴값이 있을 수도 있고, 없을 수도 있다. 없는 경우 `void`를 사용한다.
+- 메서드 이름
+    - 자바 식별자 규칙에 맞게 작성하면 되지만, 다음 사항에 주의하자.
+        - 숫자로 시작하면 안되고, $와 _를 제외한 특수문자를 사용하지 않는다.
+        - 관례적으로 메서드명은 소문자로 시작한다.
+        - 서로 다른 단어가 혼합된 이름이면 뒤이어 오는 단어의 첫머리 글자는 대문자이다.
+- 매개 변수 선언
+    - 매개 변수는 메서드가 코드 블럭을 실행할 때 필요한 데이터를 외부로부터 받기 위해 사용된다.
+- 메서드 바디
+    - 중괄호로 감싼 영역이다.
+
+### 메서드 오버로딩
+자바는 메서드 오버로딩을 지원하는데, 오버로딩이란 클래스 내에 같은 이름의 메서드를 여러 개 선언하는 것을 말한다. 메서드 오버로딩의 조건은 매개 변수의 타입, 개수, 순서 중 하나가 달라야 한다.
+
+```java
+public class DataArtist {
+    // ...
+    public void draw(String s) {
+        // ...
+    }
+
+    public void draw(int i) {
+        // ...
+    }
+
+    public void draw(double d) {
+        // ...
+    }
+
+    public void draw(int i, float f) {
+        // ...
+    }
+}
+```
+```java
+draw("something");
+draw(100);
+```
+위의 두 `draw`메서드들이 실행하는 코드들은 다르다. 
+
+메서드를 오버로딩할 때 주의할 점은 매개 변수의 타입과 개수, 순서가 똑같을 경우 매개 변수 이름만 바꾸는 것은 메서드 오버로딩이라 할 수 없다. 또한 리턴 타입을 통해서 다름을 구분하지 않는다. 따라서 다른 리턴 타입을 가진다하더라도 메서드 시그니처가 같다면 정의할 수 없다.
+
+### 참고
+[오라클 튜토리얼-메서드 정의](https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html)
 
 ## 생성자 정의하는 방법
 
@@ -132,3 +193,5 @@ Car myCar = new Car();
 
 ## 참고자료
 [new 연산자-geeksforgeeks](https://www.geeksforgeeks.org/new-operator-java/)
+
+[오라클 튜토리얼-메서드 정의](https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html)
