--- a/자바/live-study/5주차.md
+++ b/자바/live-study/5주차.md
@@ -188,10 +188,36 @@ draw(100);
 [오라클 튜토리얼-메서드 정의](https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html)
 
 ## 생성자 정의하는 방법
+생성자는 `new`연산자와 같이 사용되어 클래스로부터 객체를 생성할 때 호출되어 객체의 초기화를 담당한다. 생성자를 실행시키지 않고는 클래스로부터 객체를 만들 수 없다. 생성자에 의해 객체가 힙 영역에 생성되고 객체의 주소가 리턴되면 그 주소를 가지고 객체에 접근할 떄 이용할 수 있다. 
+
+### 생성자 선언
+생성자의 선언은 다음과 같은 형태로 작성된다.
+```
+클래스( 매개변수선언, ...) {
+    // 객체의 초기화 코드
+}
+```
+```java
+Car(String model, String color, int maxSpeed) {
+    this.model = model;
+    this.color = color;
+    this.maxSpeed = maxSpeed;
+}
+```
+위와 같이 `Car`의 생성자를 작성하면 `new`연산자를 통해 다음과 같이 객체를 생성할 수 있다.
+```java
+Car myCar = new Car("그랜저", "검정", 300);
+```
+
+클래스에 위와 같이 생성자가 명시적으로 선언되어 있을 경우 반드시 선언된 생성자를 호출해서 객체를 생성해야 한다. 물론 생성자를 선언하지 않았다면 컴파일러는 중괄호 {} 블록내용이 비어 있는 기본 생성자를 바이트코드에 자동으로 추가시켜준다.
+
+외부에서 제공하는 다양한 데이터를 받아 객체를 초기화하기 위해 다양한 생성자를 필요로 하는 경우도 있다. 그래서 자바는 생성자 오버로딩을 제공하고 있다. 생성자 오버로딩이란 생성자의 매개 변수를 달리하는 생성자를 여러개 선언하는 것을 말한다.
 
 ## this 키워드 이해하기
 
 ## 참고자료
+[이것이 자바다](http://www.yes24.com/Product/Goods/15651484)
+
 [new 연산자-geeksforgeeks](https://www.geeksforgeeks.org/new-operator-java/)
 
 [오라클 튜토리얼-메서드 정의](https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html)
