Add: LIVE-STUDY_5주차:this

--- a/자바/live-study/5주차.md
+++ b/자바/live-study/5주차.md
@@ -214,6 +214,72 @@ Car myCar = new Car("그랜저", "검정", 300);
 외부에서 제공하는 다양한 데이터를 받아 객체를 초기화하기 위해 다양한 생성자를 필요로 하는 경우도 있다. 그래서 자바는 생성자 오버로딩을 제공하고 있다. 생성자 오버로딩이란 생성자의 매개 변수를 달리하는 생성자를 여러개 선언하는 것을 말한다.
 
 ## this 키워드 이해하기
+`this`키워드는 인스턴스 메서드나 생성자 내에서 현재 객체를 의미한다. 우리는 `this`키워드를 통해 모든 인스턴스 멤버에 접근할 수 있다.
+
+여기서 인스턴스 멤버란 객체를 생성한 후 사용할 수 있는 필드와 메서드를 말하는데, 이들을 각각 인스턴스 필드, 인스턴스 메서드라 부른다.
+`Point`클래스를 예로 들어보자.
+```java
+public class Point {
+    public int x = 0;
+    public int y = 0;
+
+    // Constructor
+    public Point(int a, int b) {
+        x = a;
+        y = b;
+    }
+}
+```
+이와 같이 작성했던 `Point`클래스를 `this`를 이용해 다음과 같이 작성할 수 있다.
+```java
+public class Point {
+    public int x = 0;
+    public int y = 0;
+
+    // Constructor
+    public Point(int x, int y) {
+        this.x = x
+        this.y = y;
+    }
+}
+```
+`this`는 주로 생성자와 메서드의 매서드의 매개 변수 이름이 동일한 경우, 인스턴스 멤버인 필드임을 명시하고자 할 때 사용한다.
+
+### 생성자 오버로딩시 다른 생성자 호출
+`this`는 자기 자신의 인스턴스를 가리킨다고 위에서 배웠다. 생성자 오버로딩시 다른 생성자를 호출해야 한다면 `this`키워드를 이용해 호출할 수 있다. 이를 명시적 생성자 호출이라고 한다.
+
+```java
+public class Point {
+    public int x;
+    public int y;
+    public int z;
+    public int time;
+
+    public Point(int x, int y) {
+        this(x, y, 0, 0);
+    }
+
+    public Point(int x, int y, int z) {
+        this(x, y, z, 0);
+    }
+
+    public Point(int x, int y, int z, int time) {
+        this.x = x;
+        this.y = y;
+        this.z = z;
+        this.time = time;
+    }
+}
+```
+위의 코드를 보면 생성자 내부에서 다른 생성자를 `this`를 통해 호출하고 있다. 이 경우 해당 생성자에서 객체를 생성하는 것이 아닌 `this`로 호출한 생성자로 위임하는 것이라고 이해하면 된다.
+
+중요한 규칙으로는 `this`생성자는 반드시 생성자의 첫 번째 줄에 나와야 한다.
+
+## 과제
+- int 값을 가지고 있는 이진 트리를 나타내는 Node 라는 클래스를 정의하세요.
+- int value, Node left, right를 가지고 있어야 합니다.
+- BinrayTree라는 클래스를 정의하고 주어진 노드를 기준으로 출력하는 bfs(Node node)와 dfs(Node node) 메소드를 구현하세요.
+- DFS는 왼쪽, 루트, 오른쪽 순으로 순회하세요.
 
 ## 참고자료
 [이것이 자바다](http://www.yes24.com/Product/Goods/15651484)
@@ -221,3 +287,5 @@ Car myCar = new Car("그랜저", "검정", 300);
 [new 연산자-geeksforgeeks](https://www.geeksforgeeks.org/new-operator-java/)
 
 [오라클 튜토리얼-메서드 정의](https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html)
+
+[오라클 튜토리얼-this](https://docs.oracle.com/javase/tutorial/java/javaOO/thiskey.html)
