Add: LIVE-STUDY_5주차

--- a/자바/live-study/5주차.md
+++ b/자바/live-study/5주차.md
@@ -281,6 +281,195 @@ public class Point {
 - BinrayTree라는 클래스를 정의하고 주어진 노드를 기준으로 출력하는 bfs(Node node)와 dfs(Node node) 메소드를 구현하세요.
 - DFS는 왼쪽, 루트, 오른쪽 순으로 순회하세요.
 
+Node 클래스
+```java
+public class Node {
+    private int value;
+    private Node left;
+    private Node right;
+
+    public Node(int value) {
+        this.value = value;
+    }
+
+    public int getValue() {
+        return value;
+    }
+
+    public Node getLeft() {
+        return left;
+    }
+
+    public Node getRight() {
+        return right;
+    }
+
+    public void setLeft(Node left) {
+        this.left = left;
+    }
+
+    public void setRight(Node right) {
+        this.right = right;
+    }
+}
+```
+
+BinaryTree 클래스
+```java
+public class BinaryTree {
+
+    private Node root;
+
+    public void insertNode(Node node) {
+        if (root == null) {
+            root = node;
+        } else {
+            Node parentNode = root;
+            Node curNode = root;
+
+            int dir = 0;    // 0 -> left, 1 -> right
+
+            while (curNode != null) {
+                parentNode = curNode;
+                if (curNode.getValue() < node.getValue()) {
+                    curNode = curNode.getRight();
+                    dir = 1;
+                } else {
+                    curNode = curNode.getLeft();
+                    dir = 0;
+                }
+            }
+            if (dir == 0) {
+                parentNode.setLeft(node);
+            } else {
+                parentNode.setRight(node);
+            }
+        }
+    }
+
+    public void bfs(Node node) {
+        Queue<Node> queue = new LinkedList<>();
+        queue.add(node);
+
+        while (!queue.isEmpty()) {
+            Node cur = queue.poll();
+            System.out.print(cur.getValue() + " -> ");
+
+            if (cur.getLeft() != null) {
+                queue.add(cur.getLeft());
+            }
+            if (cur.getRight() != null) {
+                queue.add(cur.getRight());
+            }
+        }
+    }
+
+    public void dfsInorder(Node node) {
+        if (node == null) {
+            return;
+        }
+
+        dfsInorder(node.getLeft());
+        System.out.print(node.getValue() + " -> ");
+        dfsInorder(node.getRight());
+    }
+
+    public void dfsPreorder(Node node) {
+        if (node == null) {
+            return;
+        }
+
+        System.out.print(node.getValue() + " -> ");
+        dfsPreorder(node.getLeft());
+        dfsPreorder(node.getRight());
+    }
+
+    public void dfsPostorder(Node node) {
+        if (node == null) {
+            return;
+        }
+
+        System.out.print(node.getValue() + " -> ");
+        dfsPostorder(node.getRight());
+        dfsPostorder(node.getLeft());
+    }
+}
+```
+
+binaryTree는 이진 탐색 트리를 이용해 노드를 삽입하고 루트노드부터 순회하도록 하였다.
+
+dfs는 전위, 중위, 후위 각각의 순회 방법을 함수로 만들어 두었다.
+
+다음은 BinaryTree 클래스의 테스트 코드이다.
+```java
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
+class BinaryTreeTest {
+
+    BinaryTree binaryTree;
+    Node root;
+
+    @BeforeAll
+    void makeTree() {
+        binaryTree = new BinaryTree();
+
+        root = new Node(4);
+
+        binaryTree.insertNode(root);
+        binaryTree.insertNode(new Node(3));
+        binaryTree.insertNode(new Node(5));
+        binaryTree.insertNode(new Node(10));
+        binaryTree.insertNode(new Node(1));
+        binaryTree.insertNode(new Node(2));
+        binaryTree.insertNode(new Node(7));
+        binaryTree.insertNode(new Node(14));
+    }
+
+
+    @Nested
+    @DisplayName("이진 탐색 트리에서의")
+    class BinarySearchTree {
+
+        @DisplayName("DFS 중위순회 탐색의 결과는 다음과 같습니다.")
+        @Test
+        void dfsInorderTest() {
+            System.out.print("DFS (Inorder) = ");
+            binaryTree.dfsInorder(root);
+            System.out.println(" END");
+        }
+
+        @DisplayName("DFS 전위순회 탐색의 결과는 다음과 같습니다.")
+        @Test
+        void dfsPreorderTest() {
+            System.out.print("DFS (Preorder) = ");
+            binaryTree.dfsPreorder(root);
+            System.out.println(" END");
+        }
+
+        @DisplayName("DFS 후위순회 탐색의 결과는 다음과 같습니다.")
+        @Test
+        void dfsPostorderTest() {
+            System.out.print("DFS (Postorder) = ");
+            binaryTree.dfsPostorder(root);
+            System.out.println(" END");
+        }
+
+        @DisplayName("BFS 탐색의 결과는 다음과 같습니다.")
+        @Test
+        void bfsTest() {
+            System.out.print("BFS = ");
+            binaryTree.bfs(root);
+            System.out.println(" END");
+        }
+    }
+}
+```
+```
+DFS (Postorder) = 4 -> 5 -> 10 -> 14 -> 7 -> 3 -> 1 -> 2 ->  END
+BFS = 4 -> 3 -> 5 -> 1 -> 10 -> 2 -> 7 -> 14 ->  END
+DFS (Inorder) = 1 -> 2 -> 3 -> 4 -> 5 -> 7 -> 10 -> 14 ->  END
+DFS (Preorder) = 4 -> 3 -> 1 -> 2 -> 5 -> 10 -> 7 -> 14 ->  END
+```
+
 ## 참고자료
 [이것이 자바다](http://www.yes24.com/Product/Goods/15651484)
 
