Add: LIVE-STUDY_다이나믹메서드 디스패치

--- a/자바/live-study/6주차.md
+++ b/자바/live-study/6주차.md
@@ -5,6 +5,7 @@
 - super 키워드
 - 메소드 오버라이딩
 - 다이나믹 메소드 디스패치 (Dynamic Method Dispatch)
+- 더블 디스패치 (Double Dispatch)
 - 추상 클래스
 - final 키워드
 - Object 클래스
@@ -174,5 +175,144 @@ Child method
 
 다음과 같이 메서드를 오버라이딩 할 때에는 부모의 메서드와 동일한 시그니처(리턴 타입, 메서드 이름, 매개변수 목록)를 가져야 하는 것을 기억하자.
 
-## 다이나믹 메서드 디스패치
+## 다형성 (Polymorphism)
+자바에서 다형성이란 동일한 이름을 가지고 여러 형태의 동작을 취하는 테크닉을 말한다. 
 
+method overloading을 통해 컴파일 시간 다형성을 실현할 수 있고, method overriding을 통해 런타임 다형성을 실현할 수 있다. 
+
+일반적으로 우리가 말하는 다형성이란 런타임 다형성을 말한다. 런타임에 upcasting된 자식 클래스의 오버라이딩된 메서드를 호출한다.
+
+## 다이나믹 메서드 디스패치
+위의 런타임 다형성의 다른 말은 다이나믹 메서드 디스패치이다. 
+다이나믹 메서드 디스패치는 오버라이드된 메서드가 런타임시간에 실행되는 것을 말한다.
+
+```java
+class Animal {
+    public void move() {
+        System.out.println("Animals can move");
+    }
+}
+
+class Dog extends Animal {
+    public void move() {
+        System.out.println("Dogs can walk and run");
+    }
+}
+
+public class TestDog {
+
+   public static void main(String args[]) {
+   
+      Animal a = new Animal(); // Animal 참조, Animal 객체
+      Animal b = new Dog(); // Animal 참조, Dog 객체
+
+      a.move(); // Animal 클래스의 메서드 호출
+      b.move(); // Dog 클래스의 메서드 호출
+   }
+}
+```
+```
+Animals can move
+Dogs can walk and run
+```
+[참고 - 다이나믹 메서드 디스패치](https://www.tutorialspoint.com/Dynamic-method-dispatch-or-Runtime-polymorphism-in-Java)
+
+`Animal b = new Dog();` 에서 Animal 타입의 객체에 자식 타입인 Dog을 upcasting하고, b는 자식 객체의 주소를 가리키게 된다. 따라서 Dog의 메서드가 호출되는 것이다.
+
+컴파일 타임에는 참조타입만 확인하지만, 런타임에는 JVM이 객체의 타입을 확인하고 그 객체의 메서드를 호출하게 되는 것이다.
+
+## 더블 디스패치 (Double Dispatch)
+더블 디스패치는 말 그대로 디스패치를 두 번 한다는 것이다.
+[토비님의 더블 디스패치의 예](https://www.youtube.com/watch?v=s-tXAHub6vg&feature=youtu.be)를 보면 텍스트와 사진 두 가지 포스트를 올릴 수 있고, SNS에 모든 포스트를 한꺼번에 올리겠다고 해보자.
+```java
+public class Dispatch {
+
+    interface Post { void postOn(SNS sns); }
+
+    static class Text implements Post {
+        @Override
+        public void postOn(SNS sns) {
+
+            if(sns instanceof Facebook) {
+                System.out.println("text -> " + sns.getClass().getSimpleName());
+            }
+            else if (sns instanceof Twitter) {
+                System.out.println("text -> " + sns.getClass().getSimpleName());
+            }
+
+        }
+    }
+
+    static class Picture implements Post {
+        @Override
+        public void postOn(SNS sns) {
+            if(sns instanceof Facebook) {
+                System.out.println("picture -> " + sns.getClass().getSimpleName());
+            }
+            else if (sns instanceof Twitter) {
+                System.out.println("picture -> " + sns.getClass().getSimpleName());
+            }
+        }
+    }
+
+    interface SNS { }
+    static class Facebook implements SNS{ }
+    static class Twitter implements SNS{ }
+}
+```
+위 코드는 SNS의 종류가 추가될 때마다 Post의 구현체들에 if절이 추가된다는 문제점이 있다. 또 다른 SNS인 Instagram을 Text와 Picture에 구현해두고 if를 통해 처리하지 않았다면 Instagram 업로드를 처리하지 못한다. 즉, 코드 관리에 비용이 드는 문제가 있다. 이를 double dispatch를 통해서 해결할 수 있다.
+
+먼저 postOn의 비즈니스 로직을 SNS로 옮기고, Post의 구현체들에서 SNS의 post 메서드를 호출하며 자기 자신을 인자로 넘겨준다.
+```java
+public class Dispatch {
+    interface Post {
+        void postOn(SNS sns);
+    }
+
+    static class Text implements Post {
+
+        @Override
+        public void postOn(SNS sns) {
+            sns.postOn(this);
+        }
+    }
+
+    static class Picture implements Post {
+
+        @Override
+        public void postOn(SNS sns) {
+            sns.postOn(this);
+        }
+    }
+
+    interface SNS {
+        void postOn(Text text);
+        void postOn(Picture picture);
+    }
+
+    static class Facebook implements SNS {
+        @Override
+        public void postOn(Text post) {
+            System.out.println("text-facebook");
+        }
+
+        @Override
+        public void postOn(Picture picture) {
+            System.out.println("picture-facebook");
+        }
+    }
+
+    static class Twitter implements SNS {
+        @Override
+        public void postOn(Text post) {
+            System.out.println("text-twitter");
+        }
+
+        @Override
+        public void postOn(Picture picture) {
+            System.out.println("picture-twitter");
+        }
+    }
+}
+```
+새로운 SNS를 구현해서 업로드한다고 해도 Post의 코드를 전혀 건드릴 필요가 없어졌다. 단순히 새로운 SNS의 코드만 잘 구현하면 된다.
