Add: LIVE-STUDY 6주차

--- a/자바/live-study/6주차.md
+++ b/자바/live-study/6주차.md
@@ -316,3 +316,120 @@ public class Dispatch {
 }
 ```
 새로운 SNS를 구현해서 업로드한다고 해도 Post의 코드를 전혀 건드릴 필요가 없어졌다. 단순히 새로운 SNS의 코드만 잘 구현하면 된다.
+
+### 방문자 패턴
+방문자 패턴은 실제 로직을 가지고 있는 객체(Visitor)가 로직을 적용할 객체(Element)를 방문하면서 실행되는 패턴이다.
+이런 방문자 패턴은 더블 디스패치를 이용했다고 할 수 있다.
+
+Text와 Picture가 객체(Element)이고, `postOn()`메서드는 Visitor인 SNS에 의해서 호출된다. 객체(Element)가 Visitor인 SNS에 데이터 처리를 모두 맡기는 것을 방문자 패턴이라고 한다.
+
+
+## 추상 클래스
+객체를 직접 생성할 수 있는 클래스를 실체 클래스라고 한다면, 이들의 공통적인 특징을 추출해 선언한 클래스를 추상 클래스라고 한다. 추상 클래스와 실체 클래스는 상속의 관계를 가지고 있는데, 추상 클래스가 부모이고 실체 클래스는 자식으로 구현되어 실체 클래스는 추상 클래스의 모든 특성을 물려받고 추가적인 특성을 가질 수 있다.
+
+추상 클래스는 실체 클래스의 공통적인 특성을 추출해 만들었기 때문에 실제 객체를 생성할 수 없다. 
+
+### 추상 클래스 선언
+추상 클래스를 선언하기 위해서는 `abstract` 키워드를 사용한다.
+```java
+public abstract class Animal {
+    // field
+    // constructor
+    // method
+}
+```
+추상 클래스도 필드, 생성자, 메서드를 가질 수 있다.
+
+### 추상 메서드와 오버라이딩
+실체 클래스들의 메서드 시그니처만 동일하고 몸체는 각기 다른 경우 추상 클래스에서 통일할 수 없기 때문에, 추상 메서드를 작성할 수 있다.
+
+```java
+public abstract void sound();
+```
+메서드의 선언부만 존재하고 몸체가 없는 것을 확인할 수 있다. 추상 클래스를 설계할 때 하위 클래스가 동작을 결정하고 싶게 한다면, 추상 메서드를 사용하면 된다. 주의할 점은 자식 클래스는 `반드시` 추상 메서드를 재정의해야 한다는 것이다. 그렇지 않으면 컴파일 에러가 발생한다.
+
+Animal 추상 클래스를 선언하고 sound() 메서드를 추상 메서드로 선언했다고 하고, 자식 클래스에서 고유한 소리를 내도록 sound() 메서드를 재정의 해야 한다.
+```java
+public abstract class Animal {
+
+    public abstract void sound();
+}
+
+public class Dog extends Animal {
+    
+    @Override
+    public void sound() {
+        System.out.println("멍멍");
+    }
+}
+
+public class Cat extends Animal {
+
+    @Override
+    public void sound() {
+        System.out.println("야옹");
+    }
+}
+```
+
+## final 키워드
+자바에서 `final` 키워드는 변경 불가능하다는 의미를 가진다. `final`키워드는 클래스, 필드, 메서드 선언시에 사용할 수 있다. 각 사용처마다 해석이 달라지는데, 필드의 경우에는 읽기 전용 상수라고 생각하면 된다.
+
+클래스와 메서드 선언 시에 `final`은 상속과 관련이 있다.
+
+클래스를 선언할 때 앞에 `final`키워드를 붙이면 상속 불가능한 클래스가 된다. 
+```java
+public final class Car {}
+```
+
+자바에서 제공하는 `String` 클래스도 다음과 같이 `final` 클래스로 선언되어 있다.
+```java
+public final class String {...}
+```
+
+메서드의 경우 선언할 때 `final` 키워드를 붙이게 되면 오버라이딩 불가능한 메서드를 의미한다.
+
+## Object 클래스
+`Object` 클래스는 자바에서 최상위 부모 클래스를 의미한다. 모든 클래스의 직접, 간접적인 부모 클래스이다. 
+
+다른 클래스로부터 상속받지 않는 클래스들은 자동으로 `Object` 클래스를 상속받게 된다.
+```java
+public class Something {}
+```
+다음과 같은 클래스가 있을 때 컴파일러가 자동으로 `extends Object`를 붙여주게 된다.
+```java
+public class Something extends Object {}
+```
+
+우리가 그동안 `toString()` 같은 메서드를 사용할 수 있었던 이유도 `Object`클래스에서 정의된 것들이기 떄문이다.
+`Object` 클래스에서 상속받는 메서드들은 다음과 같다.
+
+- ```java
+    protected Object clone() throws CloneNotSupportedException
+    ```
+    - 해당 객체의 복사본을 만들어주고 반환하는 메서드이다. 예외가 발생하는 경우는 복사 불가능한 경우이다.
+- ```java
+    public boolean equals(Object obj)
+    ```
+    - 다른 객체와 비교해 자신과 동일한지 판단하는 메서드이다. 참고로 오버라이딩 하지 않으면 자동으로 동일성 비교를 해준다. 이 메서드를 오버라이딩 해 동등성 비교의 기준을 마련할 수 있고, hashCode() 메서드 또한 오버라이딩 해야 한다.
+- ```java
+    public int hashCode()
+    ```
+    - 객체의 해시코드 값을 반환해준다. 두 객체가 같은 경우 hashCode가 같아야 하기 때문에 `equals()`메서드도 오버라이딩 해야한다.
+- ```java
+    protected void finalize() throws Throwable
+    ```
+    - 가비지 컬렉터가 더 이상 해당 객체의 참조를 하지 않는다고 판단할 때 호출하는 메서드이다.
+- ```java
+    public final Class getClass()
+    ```
+    - 객체의 런타임 클래스를 호출한다.
+- ```java
+    public String toString()
+    ```
+    - 객체의 문자열 형태를 반환한다. 오버라이딩 하지 않으면 의미없는 정보를 보여주기 때문에 오버라이딩 하는 것을 권장하고 있다.
+
+[오라클-Object](https://docs.oracle.com/javase/tutorial/java/IandI/objectclass.html)
+
+## 참고자료
+[이것이 자바다](http://www.yes24.com/Product/Goods/15651484)
