--- a/자바/live-study/14주차.md
+++ b/자바/live-study/14주차.md
@@ -7,7 +7,7 @@
 - Erasure
 
 ## 제네릭
-Java 5부터 제네릭 타이비 새로 추가되었다. 제네릭 타입을 이용하게 되면서 잘못된 타입이 사용될 수 있는 문제를
+Java 5부터 제네릭 타입이 새로 추가되었다. 제네릭 타입을 이용하게 되면서 잘못된 타입이 사용될 수 있는 문제를
 컴파일 과정에서 제거할 수 있게 되었다. 제네릭은 클래스와 인터페이스, 그리고 메서드를 정의할 때 타입을 파라미터로 
 사용할 수 있도록 한다.
 
@@ -324,6 +324,15 @@ public class Example<T> {
 ```
 다음과 같이 배열을 사용할 때는 (T[]) 과 같이 타입변환을 해주어야 한다.
 그 이유는 new 연산자를 사용하기 때문인데, new 연산자는 힙 영역에 객체를 할당해주지만 제네릭은 컴파일 타임에 일어나는 문법이기 때문에 바로 T[] 를 못쓰는 것이다.
+
+## 제네릭과 static
+`static` 변수에는 제네릭을 사용할 수 없다. <br>
+`static` 변수는 메서드 영역에 메모리를 할당받는 클래스 변수이기 때문에 모든 인스턴스에서 공유가 된다. 그런데, 만약에 제네릭이 가능하다면 모든 인스턴스에 따라 타입이 변한다는 소리인데 이는 불가능하기 때문이다.
+
+대신에 `static` 메서드에서는 사용이 가능하다.<br>
+먼저 제네릭 메서드에 대해 설명하면, 제네릭 메서드를 정의할 때 <> 기호를 사용해 자신이 제네릭 메서드임을 컴파일러에게 알려야 하는데, 이는 클래스 레벨의 제네릭과는 무관하다. <br>
+다시 돌아와서 `static` 변수는 값 자체를 공유하기 때문에 제네릭을 사용할 수 없지만, `static` 메서드는 틀을 공유하기 때문에 틀 안에서 타입 파라미터가 오갈 수 있는 것이다.
+
 
 ## 참고 자료
 [이것이 자바다](http://www.yes24.com/Product/Goods/15651484)
